src/objects/NVMContactWorld__Field_Based_CLID_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__Call_Recording_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Call Recording Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Presented_CLID__c</fullName>
        <label>Presented Callback Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field-Based Callback Number Mapping</label>
    <listViews>
        <fullName>NVMContactWorld__Field_Based_Callback_Mappings</fullName>
        <columns>NAME</columns>
        <columns>NVMContactWorld__Object__c</columns>
        <columns>NVMContactWorld__Field__c</columns>
        <columns>NVMContactWorld__Value__c</columns>
        <columns>NVMContactWorld__Presented_CLID__c</columns>
        <columns>NVMContactWorld__Call_Recording_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>Field-Based Callback Number Mappings</label>
    </listViews>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field-Based Callback Number Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>